--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "keywords": [
     "mcp",
     "orchestration",
-    "microservices", 
+    "microservices",
     "workflow",
     "saga",
     "circuit-breaker",
@@ -38,18 +38,18 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "js-yaml": "^4.1.0",
-    "uuid": "^9.0.1",
     "node-fetch": "^2.7.0",
-    "chokidar": "^3.5.3"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@kubernetes/client-node": "^0.20.0",
-    "jest": "^29.7.0",
+    "docker": "^1.0.0",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.2",
-    "supertest": "^6.3.3",
-    "docker": "^1.0.0"
+    "supertest": "^6.3.3"
   },
   "optionalDependencies": {
     "@kubernetes/client-node": "^0.20.0"
@@ -83,9 +83,15 @@
     "testEnvironment": "node",
     "collectCoverage": true,
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "html"],
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
     "testTimeout": 30000,
-    "setupFilesAfterEnv": ["<rootDir>/test/setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.js"
+    ]
   },
   "eslintConfig": {
     "env": {
@@ -93,13 +99,20 @@
       "es2022": true,
       "jest": true
     },
-    "extends": ["eslint:recommended"],
+    "extends": [
+      "eslint:recommended"
+    ],
     "parserOptions": {
       "ecmaVersion": 2022,
       "sourceType": "module"
     },
     "rules": {
-      "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+      "no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ],
       "no-console": "off",
       "prefer-const": "error",
       "no-var": "error"
